--- a/index.html
+++ b/index.html
@@ -83,13 +83,12 @@
   </div>
   <div class="copyrights section hide">
     <div class="container">
-      <p class="footer-links text-center">Copyright © 2022 <a href="https://space.bilibili.com/125526/"
-          rel="nofollow noreferrer" target="_blank">-LKs-</a> <a href="https://github.com/xiangjianan/"
-          rel="nofollow noreferrer" target="_blank">xiangjianan</a>｜<a class="github" href="https://github.com/xiangjianan/lks"
-          rel="nofollow noreferrer" target="_blank">开源代码</a>｜<span id="clickDisclaimer" data-toggle="modal"
+      <p class="footer-links text-center">Copyright © 2024 <a href="https://yunji.one"
+          rel="nofollow noreferrer" target="_blank">-LG-</a> <a href="https://LG.com"
+          rel="nofollow noreferrer" target="_blank">版权所有</a>｜<span id="clickDisclaimer" data-toggle="modal"
           data-target="#Disclaimer">免责声明</span></p>
       <p class="footer-links text-center"><a href="https://beian.miit.gov.cn/" rel="nofollow noreferrer"
-          target="_blank">黑ICP备2021001307号-3</a></p>
+          target="_blank">京ICP备2021001307号-3</a></p>
     </div>
   </div>
   <a href="#web" id="scroll-to-top" class="dmtop global-radius" ontouchstart=""><span
