--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#E4EBF8">
-  <title>LKs 网站推荐合集</title>
+  <title>网站推荐合集</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" href="static/site/img/apple-touch-icon.jpg">
   <link rel="stylesheet" href="static/bootstrap-4.6.1/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="section-title text-left">
         <span style="display: inline-block;">
-          <h3>LKs 网站推荐合集</h3>
+          <h3>网站推荐合集</h3>
         </span>
         <div class="row">
           <div class="col-md-8">
